[package]
name = "yee-foreign-relay"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
log = "0.4"
parking_lot = "0.7.1"
tokio = "0.1"
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
sc-client = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-transaction-graph = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-transaction-pool = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }

sp-core = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-runtime = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }

yee-runtime = { package = "node-runtime", path = "../../bin/node/runtime" }
yee-balances = { package = "yee-srml-balances", path = "../../frame/balances", default_features = false }
yee-assets = { package = "yee-srml-assets", path = "../../frame/assets", default-features = false }
yee-relay = { package = "yee-srml-relay", path = "../../frame/relay", default-features = false }
yee-sr-primitives = { package = "yee-sr-primitives", path = "../../primitives/srml", default-features = false }
foreign-network = { package = "yee-foreign-network", path = "../network" }
foreign-chain = { package = "yee-foreign-chain", path = "../chain" }
util = { package = "util", path = "../../client/util" }
finality-tracker = { package = "finality-tracker", path = "../../client/finality-tracker" }

#substrate-client = { git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#substrate-service = { git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#runtime-primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#pool-graph = { package = "substrate-transaction-graph", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#transaction-pool = { package = "substrate-transaction-pool", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
##yee-runtime = { package = "yee-runtime", path = "../../runtime" }
#yee-sr-primitives = { package = "yee-sr-primitives", path = "../../primitives/srml", default-features = false }
#yee-sharding-primitives = { package = "yee-sharding-primitives", path = "../../primitives/sharding", default-features = false }
#substrate-cli = { git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#substrate-primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#foreign-network = { package = "yee-foreign-network", path = "../network" }
#foreign-chain = { package = "yee-foreign-chain", path = "../chain" }
#util = { package = "util", path = "../../client/util" }
#finality-tracker = { package = "finality-tracker", path = "../../client/finality-tracker" }
ansi_term = "0.11"
