[package]
name = "yee-srml-assets"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
sp-runtime = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git", branch = "master", default-features = false }
frame-support = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git", branch = "master", default-features = false }
frame-system = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git", branch = "master", default-features = false }
sp-std = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git", branch = "master", default-features = false }


#parity-codec = { version = "3.2", default-features = false }
#primitives = { package = "sr-primitives",  git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0", default-features = false }
#srml-support = { package = "srml-support", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0", default-features = false }
#system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0", default-features = false }
#rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0", default-features = false }
sharding-primitives = { package = "yee-sharding-primitives", path = "../../primitives/sharding", default-features = false }
sharding = { package = "yee-srml-sharding", path = "../sharding", default-features = false }
yee-sr-primitives = { package = "yee-sr-primitives", path = "../../primitives/srml", default-features = false }

[dev-dependencies]
#substrate-primitives = { git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
# sr-std = { git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
#runtime_io = { package = "sr-io",  git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"sharding-primitives/std",
	"sharding/std",
	"yee-sr-primitives/std",
]
