[package]
name = "pallet-assets"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-dev", default-features = false, git = "https://github.com/yeeco/substrate.git", branch = "yee" }
sp-io = { version = "2.0.0-dev", default-features = false, git = "https://github.com/yeeco/substrate.git", branch = "yee" }
sp-runtime = { version = "2.0.0-dev", default-features = false, git = "https://github.com/yeeco/substrate.git", branch = "yee" }
frame-support = { version = "2.0.0-dev", default-features = false, git = "https://github.com/yeeco/substrate.git", branch = "yee" }
frame-system = { version = "2.0.0-dev", default-features = false, git = "https://github.com/yeeco/substrate.git", branch = "yee" }
sp-arithmetic = { version = "2.0.0-dev", default-features = false, git = "https://github.com/yeeco/substrate.git", branch = "yee" }
yp-sharding = { path = "../../primitives/sharding", default-features = false }
yp-relay = { path = "../../primitives/relay", default-features = false }
sharding = { package = "pallet-sharding", default-features = false, path = "../sharding" }

[dev-dependencies]
sp-core = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git", branch = "yee" }
sp-std = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git", branch = "yee" }
sp-io = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git", branch = "yee" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"yp-sharding/std",
	"yp-relay/std",
	"sharding/std",
]
