[package]
name = "yee-srml-balances"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
hex = "0.3"
hex-literal = "0.1.0"
serde = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}

codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
sp-runtime = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git", branch = "master", default-features = false }
frame-support = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git", branch = "master", default-features = false }
frame-system = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git", branch = "master", default-features = false }
sp-std = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git", branch = "master", default-features = false }

sp-keyring = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git", branch = "master", optional = true }

#parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
#substrate-keyring = { git = "https://github.com/yeeco/substrate.git", optional = true, branch = "yee-v1.0" }
#rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", default-features = false, branch = "yee-v1.0" }
#primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", default-features = false, branch = "yee-v1.0" }
#srml-support = { git = "https://github.com/yeeco/substrate.git", default-features = false, branch = "yee-v1.0" }
#system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", default-features = false, branch = "yee-v1.0" }
yee-sharding-primitives = { package = "yee-sharding-primitives", path = "../../primitives/sharding", default-features = false }
sharding = { package = "yee-srml-sharding", path = "../sharding", default-features = false }
pow = { package = "yee-srml-pow", path = "../pow", default-features = false }
yee-sr-primitives = { package = "yee-sr-primitives", path = "../../primitives/srml", default-features = false }

[dev-dependencies]
#runtime_io = { package = "sr-io", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
#substrate-primitives = { git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"sp-keyring",
	"codec/std",
	"sp-std/std",
	"frame-support/std",
	"sp-runtime/std",
	"frame-system/std",
	"sharding/std",
	"yee-sharding-primitives/std"
]
