[package]
name = "yee-srml-executive"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
#parity-codec = { version = "3.2", default-features = false }
#rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0", default-features = false }
#runtime_io = { package = "sr-io", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0", default-features = false }
#primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0", default-features = false }
#srml-support = { package = "srml-support", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0", default-features = false }
#system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0", default-features = false }
#balances = { package = "yee-srml-balances", path = "../balances", default-features = false }
#sharding = { package = "yee-srml-sharding", path = "../sharding", default-features = false }
#yee-sharding-primitives = { package = "yee-sharding-primitives", path = "../../primitives/sharding", default-features = false }
#substrate-primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0", default-features = false }
#relay = { package = "yee-srml-relay", path = "../relay", default-features = false }
#yee-sr-primitives = { package = "yee-sr-primitives", path = "../../primitives/srml", default-features = false }

[dev-dependencies]
#hex-literal = "0.1.0"
#substrate-primitives = { git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
#srml-indices = { git = "https://github.com/yeeco/substrate.git",  branch = "yee-v1.0" }
#balances = { package = "yee-srml-balances", path = "../balances" }
#parity-codec-derive = { version = "3.1" }

[features]
default = ["std"]
std = [
	"serde",
#	"rstd/std",
#	"srml-support/std",
#	"parity-codec/std",
#	"primitives/std",
#	"runtime_io/std",
#	"system/std",
#	"relay/std",
#	"yee-sr-primitives/std"
]
