[package]
name = "yee-srml-pow"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
sp-runtime = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false }
frame-support = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false }
frame-system = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false }
sp-inherents = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false }
sp-std = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false }

#rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default_features = false, branch = "yee-v1.0" }
#primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default_features = false, branch = "yee-v1.0" }
#srml-support = { git = "https://github.com/yeeco/substrate.git",  branch = "yee", default_features = false, branch = "yee-v1.0" }
#system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default_features = false, branch = "yee-v1.0" }
#inherents = { package = "substrate-inherents", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default_features = false, branch = "yee-v1.0" }
#parity-codec = { version = "3.5", default-features = false, features = ["derive"] }
#srml-timestamp = { package = "srml-timestamp", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default_features = false, branch = "yee-v1.0" }
yee-srml-sharding = { package = "yee-srml-sharding", path = "../sharding", default-features = false }
yee-sharding-primitives = { package = "yee-sharding-primitives", path = "../../primitives/sharding", default-features = false }
[features]
default = ["std"]
std = [
    "serde",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "codec/std",
]
