[package]
name = "pallet-pow"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
sp-std = { git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "yee" }
sp-core = { git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "yee" }
frame-support = { git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "yee" }
frame-system = { git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "yee" }
sp-runtime = { git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "yee" }
sp-inherents = { git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "yee" }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
pallet-timestamp = { git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "yee" }
pallet-sharding = { path = "../sharding", default-features = false }
yp-consensus-pow = { path = "../../primitives/consensus/pow", default-features = false }
yp-sharding = { path = "../../primitives/sharding", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "sp-std/std",
    "sp-core/std",
    "frame-support/std",
    "frame-system/std",
    "codec/std",
]
