[package]
name = "pallet-relay"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-dev", default-features = false, git = "https://github.com/yeeco/substrate.git", branch = "yee" }
sp-runtime = { version = "2.0.0-dev", default-features = false, git = "https://github.com/yeeco/substrate.git", branch = "yee" }
frame-support = { version = "2.0.0-dev", default-features = false, git = "https://github.com/yeeco/substrate.git", branch = "yee" }
frame-system = { version = "2.0.0-dev", default-features = false, git = "https://github.com/yeeco/substrate.git", branch = "yee" }
yp-relay = { path = "../../primitives/relay", default-features = false }
balances = { package =  "pallet-balances", path = "../balances", default-features = false }
assets = { package = "pallet-assets", path = "../assets", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "balances/std",
    "assets/std",
    "yp-relay/std",
]
