[package]
name = "pallet-sharding"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
yp-sharding = { path = "../../primitives/sharding", default_features = false }
sp-std = { git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "yee" }
sp-inherents = { git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "yee" }
sp-runtime = { git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "yee" }
sp-arithmetic = { git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "yee" }
frame-support = { git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "yee" }
frame-system = { git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "yee" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "yp-sharding/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
]
