[package]
name = "yee-srml-storage"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
frame-support = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false }
frame-system = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false }
sp-std = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false }
#parity-codec = { version = "3.2", features = ["derive"], default-features = false }
#srml-support = { git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false, branch = "yee-v1.0" }
#system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false, branch = "yee-v1.0" }
#rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0", default-features = false }
yee-sr-primitives = { package = "yee-sr-primitives", path = "../../primitives/srml", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
]
