[package]
name = "srml-finality-tracker"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
hex-literal = "0.1"
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
sp-runtime = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false }
frame-support = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false }
frame-system = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false }
sp-inherents = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false }
sp-std = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false }

[dev-dependencies]
#substrate-primitives = { git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false , branch = "yee-v1.0" }
#sr-io = { package = "sr-io", git = "https://github.com/yeeco/substrate.git",  branch = "yee", default-features = false , branch = "yee-v1.0" }
#lazy_static = "1.0"
#parking_lot = "0.7"

[features]
default = ["std"]
std = [
	"serde/std",
	"codec/std",
	"sp-std/std",
	"frame-support/std",
	"sp-runtime/std",
	"frame-system/std",
	"sp-inherents/std",
]
