[package]
name = "yp-context"
version = "0.6.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yp-consensus-pow = { path = "../../primitives/consensus/pow" }
sp-runtime = { git = "https://github.com/yeeco/substrate.git", default_features = false, branch = "yee" }
