[package]
name = "yp-core"
version = "0.5.0"
authors = ["YeeCo contact@yeefoundation.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

[dev-dependencies]
hex = "0.3.1"
sp-core = { git = "https://github.com/yeeco/substrate.git", branch = "yee" }
