[package]
name = "yp-hrp"
version = "0.1.0"
authors = ["sman <sman2013@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.7"
serde = { version = "1.0", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
