[package]
name = "yee-consensus-pow-primitives"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
sp-core = { git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-runtime = { package = "sp-runtime", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-api = { package = "sp-api", default-features = false, optional = true, git = "https://github.com/yeeco/substrate.git",  branch = "yee" }

[features]
default = ["std"]
std = [
    "sp-api"
]
